--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
   <section class="py-24 px-6 max-w-4xl mx-auto">
     <h2 class="text-2xl mb-8 border-b border-neutral-700 pb-2">Profile</h2>
     <div class="flex flex-col md:flex-row gap-8 items-center">
-      <div class="w-32 h-32 rounded-full bg-neutral-800"></div>
+      <img
+  src="profile.jpg"
+  alt="Tatsuya"
+  class="w-32 h-32 rounded-full object-cover border border-neutral-700"
+/>
+
       <div class="text-neutral-300">
         <p class="text-xl mb-2">Tatsuya</p>
         <p>FX / Quantitative perspective</p>
