--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body class="bg-black text-neutral-200">
 
+    <!-- Header / Logo -->
+  <header class="w-full px-6 py-4">
+    <img src="images/tatsuya-logo.svg" alt="Tatsuya" class="h-8 opacity-90" />
+  </header>
+
   <!-- Hero -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-6">
     <div class="mb-6 text-yellow-500 text-5xl font-light">T</div>
