--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Header / Logo -->
   <header class="w-full px-6 py-4">
-    <img src="images/tatsuya-logo.svg" alt="Tatsuya" class="h-8 opacity-90" />
+    <img src="images/tatsuya-logo.png" alt="Tatsuya" class="h-8 opacity-90" />
   </header>
 
   <!-- Hero -->
