--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QUANT LOG by Tatsuya</title>
+  <meta name="description" content="QUANT LOG by Tatsuya. Quantitative FX、マーケット観測、リスク管理と思考プロセスを記録・検証するログサイト。" />
+  <title>QUANT LOG｜Quantitative FX・リスクと思考のログ by Tatsuya</title>
   <meta name="description" content="QUANT LOG by Tatsuya — Quantifying risk in markets and life." />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -14,7 +14,7 @@
 
     <!-- Header / Logo -->
   <header class="w-full px-6 py-4">
-    <img src="images/tatsuya-logo.png" alt="Tatsuya" class="h-8 opacity-90" />
+    <img src="images/tatsuya-logo.png" alt="Tatsuya logo" />
   </header>
 
   <!-- Hero -->
