--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
     <!-- Header / Logo -->
   <header class="w-full px-6 py-4">
-    <img src="images/tatsuya-logo.png" alt="Tatsuya logo" />
+    <img
+  src="images/tatsuya-logo.png"
+  alt="Tatsuya"
+  class="h-6 md:h-7 opacity-90"
+/>
+
   </header>
 
   <!-- Hero -->
