--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="QUANT LOG by Tatsuya. Quantitative FX、マーケット観測、リスク管理と思考プロセスを記録・検証するログサイト。" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QUANT LOG｜Quantitative FX・リスクと思考のログ by Tatsuya</title>
   <meta name="description" content="QUANT LOG by Tatsuya — Quantifying risk in markets and life." />
   <script src="https://cdn.tailwindcss.com"></script>
